--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "puppeteer": "^23.0.2"
+    "puppeteer": "^23.0.2",
     "puppeteer-screen-recorder": "^3.0.0"
   }
 }
