--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ig-bot",
+  "name": "docs/index.js",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node docs/index.js"
   },
   "dependencies": {
     "luxon": "^3.4.4",
