--- a/.github/workflows/instagram-like.yml
+++ b/.github/workflows/instagram-like.yml
@@ -2,6 +2,12 @@ name: Instagram Like Bot
 
 on:
   workflow_dispatch:
+ # schedule:
+  #  - cron: '0 1 * * *'   # 08:00 WIB (UTC+7)
+
+concurrency:
+  group: instagram-like
+  cancel-in-progress: true
 
 jobs:
   run-like:
@@ -9,7 +15,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -19,5 +24,5 @@ jobs:
         env:
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
 
-      - name: Run Like Bot
+      - name: Run Like
         run: node docs/index.js Like
