--- a/.github/workflows/instagram-FOLLOWFOLLOWING.yml
+++ b/.github/workflows/instagram-FOLLOWFOLLOWING.yml
@@ -2,8 +2,8 @@ name: Instagram Follow Following
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 6 * * *'   # 13:00 WIB
+ # schedule:
+  #  - cron: '0 6 * * *'   # 13:00 WIB
 
 concurrency:
   group: instagram-follow-following
