--- a/.github/workflows/instagram-like.yml
+++ b/.github/workflows/instagram-like.yml
@@ -24,14 +24,8 @@ jobs:
         env:
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
 
-      - name: Install xvfb
-        run: sudo apt-get update && sudo apt-get install -y xvfb
-
       - name: Run Like
-        run: xvfb-run --auto-servernum node docs/index.js Like
-
-     # - name: Run Like
-        #run: node docs/index.js Like
+        run: node docs/index.js Like
 
       - name: Upload screenshots
         uses: actions/upload-artifact@v4
