--- a/.github/workflows/Instagram-UNFOLLOW.yml
+++ b/.github/workflows/Instagram-UNFOLLOW.yml
@@ -2,8 +2,8 @@ name: Instagram Unfollow
 
 on:
   workflow_dispatch:
- # schedule:
-  #  - cron: '0 15 * * *'   # 22:00 WIB
+  # schedule:
+  #   - cron: '0 15 * * *'
 
 concurrency:
   group: instagram-unfollow
@@ -15,6 +15,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -24,4 +25,11 @@ jobs:
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
 
       - run: node docs/index.js Unfollow
-      
+
+      # ✅ Upload Screenshot
+      - name: Upload Screenshots
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: unfollow-screenshots
+          path: after_*.png
