--- a/.github/workflows/Instagram-FOLLOWFOLLOWER.yml
+++ b/.github/workflows/Instagram-FOLLOWFOLLOWER.yml
@@ -31,5 +31,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: follow-follower-screenshots
-          path: after_*.png
+          name: after-follow-follower-images
+          path: after_follow_follower_*.png
