--- a/.github/workflows/instagram-FOLLOWFOLLOWING.yml
+++ b/.github/workflows/instagram-FOLLOWFOLLOWING.yml
@@ -31,5 +31,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: follow-following-screenshots
-          path: after_*.png
+          name: after-follow-following-images
+          path: after_follow_following_*.png
